<resources>
    <string name="app_name">TutorEsi</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="mailRequired">Adresse email requise</string>
    <string name="mailNoValid">Adresse email non valide</string>
    <string name="passwordRequired">Mots de passe requis</string>
    <string name="passwordPattern">Le mots de passe doit contenir au moins 6 caractères</string>
    <string name="phoneRequired">Numéro de téléphone requis</string>
    <string name="phoneNoValid">Le numéro n\'est pas valide</string>
    <string name="passwordNotSame">Mots de passe différents</string>
    <string name="login_failed">L\'email ou le mots de passe est incorrect.</string>
    <string name="login_success">Connecté avec succés</string>
    <string name="create_account">Créer un compte</string>
    <string name="goToLogin_text">Déjà un compte ? Cliquez ici</string>
    <string name="login_msg">Se connecter</string>
    <string name="register_title">Inscription</string>
    <string name="register_msg">S\'inscrire</string>
    <string name="register_success">Bienvenue !</string>
    <string name="register_failed">Erreur lors de la création du compte</string>
    <string name="register_failed_userAlreadyExists">Erreur création du compte : Email déjà utilisé</string>
    <string name="register_failed_weakPassword">Erreur création du compte : Mots de passe faible</string>
    <string name="register_failed_emailInvalid">Erreur création du compte : Email invalide</string>
    <string name="menu">Tableau de bord</string>
    <string name="Cours">Cours</string>
    <string name="find_tutoring">Chercher un tuteur</string>
    <string name="become_tutor">Devenir tuteur</string>
    <string name="reminder">Rappel</string>
    <string name="signout">Se déconnecter</string>
    <string name="myaccount">Mon compte</string>
    <string name="location">Lieu</string>
    <string name="Date">Date</string>
    <string name="Add">Ajouter</string>
    <string name="Save">Sauvegarder</string>
    <string name="infos_saved">Informations du compte sauvegardées</string>
    <string name="newProfileImgSaved">Nouvelle photo de profile sauvegardée</string>
    <string name="updateInfosFailed">Le changement d•\' informations du compte à échouer</string>
    <string name="uploadAvatarFailed">Le changement de photo de profile à échouer</string>
    <string name="reminder_added">Rappel ajouté avec succés</string>
    <string name="user_undefined">Informations utilisateur inaccesibles</string>
    <string name="connexion_loading">Connexion...</string>
    <string name="Time">Heure</string>
    <string name="description">Description</string>
    <string name="description_course">Description du cours</string>
    <string name="description_tutoring">Description du tutorat</string>
    <string name="description_courseRequired">Une description du cours est requise entre 4 et 30 caractères.</string>
    <string name="description_tutoringRequired">Une description du tutorat est requise entre 4 et 100 caractères.</string>
    <string name="course_id">ID du cours</string>
    <string name="course_idRequired">ID du cours doit être composé entre 4 et 6 caractères</string>
    <string name="separator">|</string>
    <string name="course_libelle">Libelle</string>
    <string name="course_libelleRequired">Un libellé de cours est requis entre 4 et 25 caractères.</string>
    <string name="name">Nom</string>
    <string name="mail">Email</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="password">Mots de passe</string>
    <string name="confirmPassword">Confirmer mots de passe</string>
    <string name="profileTutor">Profile du tuteur</string>
    <string name="call">Contacter par téléphone</string>
    <string name="sendMail">Contacter par mail</string>
    <string name="chooseYourPhoto">Choisit ta photo de profil</string>
    <string name="takePhoto">Prendre une photo</string>
    <string name="chooseInGalerie">Choisir dans ma galerie</string>
    <string name="nameRequired">Nom requis</string>
    <string name="phonoDigitError">Le numéro doit être composé de 10 chiffres</string>
    <string name="tutoringCreateSuccessfull">Tu as été inscris comme tuteur</string>
    <string name="tutoringCreateFailed">Ton inscription en tant que tuteur a échoué</string>
    <string name="spam">Spam,\n note non prise en compte !</string>
    <string name="ratingOneself">Note non prise en compte,\n on ne peut pas se noter soi même ;)</string>
    <string name="ratingDone">Note prise en compte</string>
    <string name="ratingFailed">La note a échouer</string>
    <string name="errorOpeningMail">Erreur lors de l\'ouverture de l\'application mail</string>
    <string name="confirmTutoring">Tu es sûr de ne plus vouloir être tuteur dans ce cours ?</string>
    <string name="tutoringDeleted">Tutoring supprimé</string>
    <string name="deleted">supprimé</string>
    <string name="deletedFailed">La suppression a échoué</string>
    <string name="reminderDeleted">Rappel supprimé</string>
    <string name="tutoringCourse">Cours de tutoring</string>
    <string name="noTutoorCourseDeleted">supprimé, plus aucun tuteur</string>
    <string name="askDeleteReminder">Tu es sûr de vouloir supprimé ce rappel ?</string>
    <string name="reminderCourseRequired">Cours requis</string>
    <string name="reminderDateRequired">Date requise</string>
    <string name="reminderLocationRequired">Location requise</string>
    <string name="remonderTimeRequired">Heure requise</string>
    <string name="channelNotificationReminder">Canal TutorESI Rappel</string>
    <string name="noConnectionInternetTitle">Pas de connexion internet</string>
    <string name="noConnectionInternetMsg">Veuillez vérifier votre connexion internet et réessayer</string>
    <string name="courseAddedSucces">Le cours de tutorat a été crée</string>
    <string name="courseAlreadyExist">Le cours existe déjà</string>
    <string name="courseAddedFailed">La création du cours a échouer</string>
    <string name="notifText">Hey, il semblerait que tu as une séance de tutorat prévue...</string>
    <string name="notifTitle">Rappel TutorESI</string>
    <string name="channelID">notifyTutorEsi</string>
    <string name="tutor">Tuteur</string>
</resources>
