<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formReminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:paddingTop="100dp"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reminder"
            style="@style/textView_style"
            android:textSize="30dp"
            android:layout_marginBottom="50dp"/>

        <EditText
            style="@style/editText_style"
            android:hint="@string/Cours"
            android:id="@+id/input_reminder_course"
            android:drawableLeft="@drawable/ic_action_course"
            android:paddingLeft="10dp"
            android:inputType="text" />

        <EditText
            style="@style/editText_style"
            android:hint="@string/location"
            android:id="@+id/input_reminder_location"
            android:drawableLeft="@drawable/ic_loc"
            android:paddingLeft="10dp"
            android:inputType="text" />

        <EditText
            style="@style/editText_style"
            android:hint="@string/Date"
            android:id="@+id/input_reminder_date"
            android:drawableLeft="@drawable/ic_date"
            android:focusable="false"
            android:clickable="true"
            android:paddingLeft="10dp"
            android:inputType="date" />

        <EditText
            style="@style/editText_style"
            android:hint="@string/Time"
            android:id="@+id/input_reminder_time"
            android:drawableLeft="@drawable/ic_action_time"
            android:focusable="false"
            android:clickable="true"
            android:paddingLeft="10dp"
            android:inputType="time" />

        <Button
            android:id="@+id/btn_reminder_register"
            style="@style/button_style"
            android:text="@string/Add"/>

    </LinearLayout>
</RelativeLayout>