<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:paddingTop="30dp"
    android:background="@color/colorPrimary"
    tools:context=".BecomeTutorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/become_tutor"
            style="@style/textView_style"
            android:textSize="30dp"
            android:layout_marginBottom="20dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/owl_tutor"
            android:layout_marginBottom="50dp"/>

        <EditText
            style="@style/editText_style"
            android:hint="@string/course_id"
            android:paddingLeft="10dp"
            android:id="@+id/input_course"
            android:drawableLeft="@drawable/ic_action_key"
            android:inputType="text" />

        <EditText
            style="@style/editText_style"
            android:hint="@string/course_libelle"
            android:paddingLeft="10dp"
            android:id="@+id/input_libelle"
            android:drawableLeft="@drawable/ic_action_course"
            android:inputType="text" />

        <EditText
            style="@style/editText_style"
            android:hint="@string/description_course"
            android:id="@+id/input_description_course"
            android:drawableLeft="@drawable/ic_action_course"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" />

        <EditText
            style="@style/editText_style"
            android:hint="@string/description_tutoring"
            android:id="@+id/input_description_tutoring"
            android:paddingLeft="10dp"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_course" />

        <Button
            android:id="@+id/btn_addCourse"
            style="@style/button_style"
            android:text="@string/Add" />

    </LinearLayout>
</RelativeLayout>