<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="70dp"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:background="@drawable/reminder_background"
    tools:context=".ProfileTutorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profileTutor"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:layout_marginBottom="50dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tutor_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/default_img_user"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/name"
            android:hint="Nom"
            android:paddingLeft="10dp"
            android:id="@+id/tutor_name"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            android:textSize="20dp"
            android:inputType="text" />


        <TextView
            style="@style/editText_style"
            android:hint="@string/course_id"
            android:paddingLeft="10dp"
            android:id="@+id/course_title"
            android:focusable="false"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_action_course"
            android:inputType="text"/>

        <TextView
            style="@style/editText_style"
            android:hint="@string/description_tutoring"
            android:paddingLeft="10dp"
            android:id="@+id/tutoring_description"
            android:focusable="false"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_action_course"
            android:inputType="textMultiLine"/>


        <Button
            android:id="@+id/btn_call_tutor"
            style="@style/button_style"
            android:text="@string/call"
            android:paddingLeft="30dp"
            android:drawableLeft="@drawable/ic_action_phone"/>
        <Button
            android:id="@+id/btn_mail_tutor"
            style="@style/button_style"
            android:drawableLeft="@drawable/ic_action_user"
            android:paddingLeft="30dp"
            android:text="@string/sendMail" />

    </LinearLayout>
</RelativeLayout>