<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/default_img_user" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="60dp"
                android:layout_marginBottom="30dp"
                android:text="@string/menu"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_findTutoring"
                android:background="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_action_search"
                style="@style/button_style"
                android:text="@string/find_tutoring" />

            <Button
                android:id="@+id/btn_reminder"
                android:background="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_action_reminder"
                style="@style/button_style"
                android:text="@string/reminder" />

            <Button
                android:id="@+id/btn_myaccount"
                android:background="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_action_account"
                style="@style/button_style"
                android:text="@string/myaccount" />

            <Button
                android:id="@+id/btn_signout"
                android:background="@color/colorPrimary"
                android:paddingLeft="10dp"
                style="@style/button_style"
                android:drawableLeft="@drawable/ic_action_signout"
                android:text="@string/signout" />

        </LinearLayout>
    </RelativeLayout>
