<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorYellow"
        android:orientation="vertical"
        android:id="@+id/background_course"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:paddingTop="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/owl_tutor"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/colorLightGreen"/>

        <TextView
            android:id="@+id/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Cours"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="100dp"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:text="@string/separator"
            android:layout_marginLeft="175dp"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/course_libelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/course_libelle"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="195dp"
            android:textStyle="bold"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/course_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_title"
            android:text="@string/description"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>