<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMauve"
        android:orientation="vertical"
        android:id="@+id/background_reminder"
        >


        <TextView
            android:id="@+id/course_card_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_action_time_reminder"
            android:text="@string/Cours"
            android:layout_marginLeft="15dp"
            android:drawablePadding="15dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/date_card_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:layout_below="@+id/course_card_reminder"
            android:text="@string/Date"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/location_card_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_below="@+id/date_card_reminder"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>